merge: resolve conflicts with dev and preserve facilities resources routes
Agent-Logs-Url: https://github.com/sankethabilas/Smart_campus_hub/sessions/4f81b644-56d4-486c-9dd6-6ff67f915813

Co-authored-by: sankethabilas <176200803+sankethabilas@users.noreply.github.com>